<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ConformerSearchDialog</class>
 <widget class="QDialog" name="ConformerSearchDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>382</width>
    <height>468</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Conformer Search</string>
  </property>
  <layout class="QVBoxLayout">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Method</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <widget class="QRadioButton" name="systematicRadio">
        <property name="text">
         <string>Systematic rotor search</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="randomRadio">
        <property name="text">
         <string>Random rotor search</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="weightedRadio">
        <property name="text">
         <string>Weighted rotor search</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="geneticRadio">
        <property name="text">
         <string>Genetic algorithm search</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="systematicOptionsGroupBox">
     <property name="title">
      <string>Systematic / Random / Weighted Options</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <widget class="QLabel" name="atomLabel">
        <property name="text">
         <string>Number of atoms:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="bondsLabel">
        <property name="text">
         <string>Number of rotatable bonds:</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout">
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Number of conformers</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="numSpin">
          <property name="maximum">
           <number>10000</number>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="geneticGroupBox">
     <property name="title">
      <string>Genetic Algorithm Options</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Children</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Mutability</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Convergence</string>
          </property>
         </widget>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>Scoring method</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QSpinBox" name="childrenSpinBox">
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>9999</number>
          </property>
          <property name="value">
           <number>30</number>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QSpinBox" name="mutabilitySpinBox">
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>9999</number>
          </property>
          <property name="value">
           <number>5</number>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QSpinBox" name="convergenceSpinBox">
          <property name="minimum">
           <number>2</number>
          </property>
          <property name="maximum">
           <number>999</number>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="QComboBox" name="scoringComboBox">
          <item>
           <property name="text">
            <string>RMSD</string>
           </property>
          </item>
          <item>
           <property name="text">
            <string>Energy</string>
           </property>
          </item>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>ConformerSearchDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>ConformerSearchDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
